--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <span>Entradas</span> 
           <img src="./assets/income.svg" alt="Imagem de entradas">
         </h3>
-        <p>R$5.000,00</p>
+        <p id="incomeDisplay" class="income">R$0,00</p>
       </div>
 
       <div class="card">
@@ -36,7 +36,7 @@
           <span>Saídas</span> 
           <img src="./assets/expense.svg" alt="Imagem de saídas">
         </h3>
-        <p>R$2.000,00</p>
+        <p id="expenseDisplay" class="expense">R$0,00</p>
       </div>
 
       <div class="card total">
@@ -44,7 +44,7 @@
           <span>Total</span> 
           <img src="./assets/total.svg" alt="Imagem de saldo total">
         </h3>
-        <p>R$3.000,00</p>
+        <p id="totalDisplay">R$0,00</p>
       </div>
 
     </section>
@@ -64,7 +64,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
+          <!-- <tr>
             <td class="description">Luz</td>
             <td class="expense">- R$500,00</td>
             <td class="date">23/01/2021</td>
@@ -81,7 +81,7 @@
             <td class="expense">- R$1.500,00</td>
             <td class="date">26/01/2021</td>
             <td><img src="./assets/minus.svg" alt="Remover transação"></td>
-          </tr>
+          </tr> -->
         </tbody>
       </table>
     </section>
@@ -92,7 +92,7 @@
     <div class="modal">
       <div id="form">
         <h2>Nova Transação</h2>
-        <form action="">
+        <form action="" onsubmit="Form.submit(event)">
           <div class="input-group">
             <label class="sr-only" for="description">Descrição</label>
             <input type="text" id="description" name="description" placeholder="Descrição">
